samples/_failures_safe/1761621399_e1e7ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_320ef789.c: In function ‘main’:
./samples/SAFE/__tmp_320ef789.c:131:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  131 |     int min_level
      |     ^~~
./samples/SAFE/__tmp_320ef789.c:131:5: error: expected declaration or statement at end of input
